# cj-process-monitor

./: CMakeLists.txt  README.md
gui/ProcessMonitor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  ProcessReader.cpp  ProcessReader.h  main.cpp
src/dbus/: MyService.h  client-proxy.h  interface.xml  server-adaptor.h
tests/: CMakeLists.txt  test_main.cpp
